# poffertjes_shop

./: .gitignore  README.md  catalog.json  conventions.py  dbt_project.yml  graph.gpickle  manifest.json  partial_parse.msgpack  profiles.yml  pyproject.toml  run_results.json  selectors.yml  sources.json
.devcontainer/: Dockerfile  postCreateCommand.sh
.github/workflows/: ci.yml  conventions.yml  docs.yml
analyses/: poffertjes_per_person.sql
compiled/poffertjes_shop/analyses/: poffertjes_per_person.sql
compiled/poffertjes_shop/models/: customers.sql  order_items.sql  orders.sql  products.sql
macros/: convert_currency.sql  create_or_replace_table_customers.sql  create_or_replace_table_external_events.sql  create_or_replace_table_raw_customers.sql  create_or_replace_table_raw_order_items.sql  create_or_replace_table_raw_orders.sql  create_or_replace_table_raw_products.sql  macros.yml
models/: customers.sql  order_items.sql  orders.sql  products.sql  schema.yml  sources.yml
models/base/: base_customers.sql  base_employees.sql  base_order_items.sql  base_orders.sql  base_products.sql  base_shoppes.sql  sources.yml
models/marts/revenue/: exposures.yml  metrics.yml  revenue.yml  revenue_summary.sql
run/poffertjes_shop/models/: customers.sql  order_items.sql  orders.sql  products.sql
run/poffertjes_shop/seeds/: employees.csv  (+1 more)
seeds/: employees.csv  shoppes.csv
snapshots/: __snapshot__customers.sql  __snapshot__order_items.sql  __snapshot__orders.sql  __snapshot__products.sql
tests/generic/: non_negative.sql
tests/macros/: test_convert_currency.sql
(+58 files in other folders)
