[tool.poetry]
name = "poffertjes_shop"
version = "0.1.0"
description = "A dbt project for testing purposes"
authors = ["Tom Waterman <tjwaterman99@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
dbt-core = "^1.0.1"
dbt-postgres = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
